--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "browser-sync": "^2.24.6",
     "gulp": "^3.9.1",
+    "gulp-if": "^2.0.2",
     "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.1",
     "gulp-useref": "^3.1.5"
   }
 }
