--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp": "^3.9.1",
     "gulp-if": "^2.0.2",
     "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify-es": "^1.0.4",
     "gulp-useref": "^3.1.5"
   }
 }
