--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "browser-sync": "^2.24.6",
     "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.3",
     "gulp-if": "^2.0.2",
     "gulp-sass": "^4.0.1",
     "gulp-uglify-es": "^1.0.4",
