--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify-es": "^1.0.4",
-    "gulp-useref": "^3.1.5"
+    "gulp-useref": "^3.1.5",
+    "run-sequence": "^2.2.1"
   }
 }
