--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify-es": "^1.0.4",
     "gulp-useref": "^3.1.5",
